# EarlyBird_Replication

./: .gitignore  DESIGN.md  Dockerfile  README.md  pyproject.toml  requirements.txt  results_dispersion_sweep.md  results_dispersion_sweep_substring.md  results_time_till_first_alarm.md  summary.csv
scripts/: eval_sweep.py  extract_http_flows.py  run_detection.py  split_pcap_flows.py
src/earlybird/: __init__.py  config.py  dispersion.py  metrics.py  pcap_processing.py  pcap_replay.py  prevalence.py  rabin.py  run.py  signatures.py
src/earlybird_witty.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_dispersion.py  test_prevalence.py  test_rabin.py  test_witty_smoke.py
