[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earlybird-witty"
version = "0.1.0"
description = "EarlyBird content-sifting worm fingerprinting on CAIDA Witty pcaps"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dpkt>=1.9.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["earlybird*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
